<resources>
    <string name="app_name">View &amp; Resources</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="save">Save</string>
    <string name="phone_type">Phone type</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="reset_my_password">Reset my password</string>
    <string name="cancel">Cancel</string>
    <string name="title_item">Title item</string>
    <string name="category">Category</string>
    <string name="place_order">Place order</string>
    <string name="supporting_line_text">Supporting line text lorem ipsum dolor sit amet, consectetur.</string>
    <string name="ordertotal">OrderTotal:</string>
    <string name="subtotal">Subtotal:</string>
    <string name="shipping">Shipping:</string>
    <string name="_25">25</string>
    <string name="_140">140</string>
    <string name="_175_5">175.5</string>
    <string name="recyclerviewitems">recyclerViewItems</string>
    <string name="phone">Phone</string>
    <string name="date">Date</string>
    <string name="_4_items_in_your_cart">4 items in your cart</string>
    <string name="tax">Tax:</string>
    <string name="_10_5">10.5</string>
</resources>