<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".CartActivity">

    <include
        android:id="@+id/includedToolbar"
        layout="@layout/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textViewCountItemsInCart"
        style="@style/TextAppearance.Base"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_4_items_in_your_cart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/includedToolbar" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewItems"
        android:layout_width="match_parent"
        android:layout_height="460dp"
        android:contentDescription="@string/recyclerviewitems"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCountItemsInCart"
        tools:itemCount="4"
        tools:background="#5CC1AC"
        tools:visibility="visible"
        tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textViewTotalOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ordertotal"
            style="@style/TextAppearance.App.Subtitle1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/dollar_ico"
            style="@style/TextAppearance.App.Subtitle1.Value"
            android:text="@string/_175_5"
            app:layout_constraintBaseline_toBaselineOf="@id/textViewTotalOrder"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textViewSubtotal"
            style="@style/TextAppearance.Base"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/subtotal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewTotalOrder" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.Base.Value"
            android:drawableStart="@drawable/dollar_ico"
            android:text="@string/_140"
            app:layout_constraintBaseline_toBaselineOf="@id/textViewSubtotal"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textViewShipping"
            style="@style/TextAppearance.Base"
            android:layout_width="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_height="wrap_content"
            android:text="@string/shipping"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewSubtotal"/>

        <com.google.android.material.textview.MaterialTextView
            style="@style/TextAppearance.Base.Value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/dollar_ico"
            android:text="@string/_25"
            app:layout_constraintBaseline_toBaselineOf="@id/textViewShipping"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textViewTax"
            style="@style/TextAppearance.Base"
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tax"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewShipping"/>

        <com.google.android.material.textview.MaterialTextView
            style="@style/TextAppearance.Base.Value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/dollar_ico"
            android:text="@string/_10_5"
            app:layout_constraintBaseline_toBaselineOf="@id/textViewTax"
            app:layout_constraintEnd_toEndOf="parent"/>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/place_order"
            app:icon="@drawable/check_circle_outline_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewTax"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>