<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/login"
        android:gravity="center_vertical|center_horizontal"
        android:textSize="24sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login"

        android:padding="16dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:endIconMode="password_toggle"
        app:endIconDrawable="@drawable/sunny_24dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_my_password"
        android:layout_gravity="right"
        android:layout_margin="8dp"
         />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="8dp"
        android:paddingBottom="22dp"
        android:gravity="end" >


        <Button
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:text="@string/login"
            />
        <Button
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:text="@string/cancel"
            />

    </LinearLayout>



</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>