<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contacts"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactsActivity">


    <include
        android:id="@+id/includedToolbar"
        layout="@layout/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="10dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="10dp" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/filledTextFieldName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Name"
        android:paddingTop="10dp"
        app:endIconDrawable="@drawable/person_24dp"
        app:endIconMode="custom"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/includedToolbar">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/filledTextFieldPhone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/phone"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        app:endIconDrawable="@drawable/smartphone"
        app:endIconMode="custom"
        app:layout_constraintEnd_toStartOf="@+id/filledTextFieldPhoneType"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/filledTextFieldName">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="0123456789-+()" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/filledTextFieldPhoneType"
        style="?attr/textInputFilledExposedDropdownMenuStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/phone_type"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/filledTextFieldPhone"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintHorizontal_weight="1.5"
        app:layout_constraintStart_toEndOf="@id/filledTextFieldPhone"
        app:layout_constraintTop_toTopOf="@+id/filledTextFieldPhone">

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            app:simpleItems="@array/phoneType" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/filledTextFieldAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/address"
        android:paddingTop="10dp"
        app:endIconDrawable="@drawable/bookmark_24dp"
        app:endIconMode="custom"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/filledTextFieldPhone">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/filledTextFieldCity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/city"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintEnd_toStartOf="@+id/filledTextFieldCountry"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/filledTextFieldAddress">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/filledTextFieldCountry"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/country"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintBottom_toBottomOf="@+id/filledTextFieldCity"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toEndOf="@id/filledTextFieldCity"
        app:layout_constraintTop_toTopOf="@+id/filledTextFieldCity">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/filledTextBirthday"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/date"
        android:paddingTop="10dp"
        app:endIconDrawable="@drawable/calendar_24dp"
        app:endIconMode="custom"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/filledTextFieldCity">

        <com.google.android.material.textfield.TextInputEditText
            android:digits="0123456789."
            android:maxLength="10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Notes"
        android:paddingTop="10dp"
        app:endIconDrawable="@drawable/mic_24dp"
        app:endIconMode="custom"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/filledTextBirthday">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_start" />

</androidx.constraintlayout.widget.ConstraintLayout>